--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,8 @@ jobs:
       - run: npm run build --if-present
       - name: Deploy
         run: |
-          git remote set-url origin https://$8161050e575e8a2e695890be0076a694a3e09981@github.com/webkurs2020-CICD-React
+          git remote set-url origin $https://$8161050e575e8a2e695890be0076a694a3e09981@github.com/webkurs2020-CICD-React
           npm run deploy
         env:
-          github_token: 8161050e575e8a2e695890be0076a694a3e09981
-          repository: webkurs2020-CICD-React
+          github_token: $8161050e575e8a2e695890be0076a694a3e09981
+          repository: $webkurs2020-CICD-React
